--- a/HTML/nuovoVeicoloNoleggio.html
+++ b/HTML/nuovoVeicoloNoleggio.html
@@ -18,11 +18,11 @@
         <menu></menu>
         <div id="menuAmministratore">
             <ul>
-                <li><a href="homeAmministratore.html"><span xml:lang="en">HOME</span> AREA PERSONALE</a></li>
-                <li><a href="infoAmministratore.html">INFORMAZIONI PERSONALI</a></li>
-                <li><a href="messaggiAmministratore.html">MESSAGGI</a></li>
-                <li><a href="veicoliNoleggioAmministratore.html">VEICOLI A NOLEGGIO</a></li>
-                <li><a href="veicoliVenditaAmministratore.html">VEICOLI IN VENDITA</a></li>
+                <li><a href="../PHP/homeAmministratore.php"><span xml:lang="en">HOME</span> AREA PERSONALE</a></li>
+                <li><a href="../PHP/infoAmministratore.php"></a>INFORMAZIONI PERSONALI</a></li>
+                <li><a href="../PHP/messaggiAmministratore.php">MESSAGGI</a></li>
+                <li><a href="../PHP/veicoliNoleggioAmministratore.php">VEICOLI A NOLEGGIO</a></li>
+                <li><a href="../PHP/veicoliVenditaAmministratore.php">VEICOLI IN VENDITA</a></li>
             </ul>
         </div>
         <div class="corpoAmministratore">
