php pagine noleggio e acquista

--- a/HTML/noleggioAcquista.html
+++ b/HTML/noleggioAcquista.html
@@ -17,7 +17,7 @@
 		<menu></menu>
 		<breadcrumb></breadcrumb>
 
-		<div >
+		<div>
 			<label>Ricerca auto</label>
 			<input type="text" name="searchbar" placeholder="Cerca...">
 
@@ -28,6 +28,7 @@
 		<filtriAuto></filtriAuto>
 
 		<div id="main">
+			<auto></auto>
 		</div>
 
 		<footer></footer>
