aggiunte pagine e funzioni php amministratore

--- a/HTML/nuovoVeicoloNoleggio.html
+++ b/HTML/nuovoVeicoloNoleggio.html
@@ -8,23 +8,15 @@
 		<meta name="language" content="italian it" />
 		<meta name="author" content="Giulia Fiorese" />
 		<link rel="icon" type="images/png" href="../Images/auto.svg" />
-		<link rel="stylesheet" type="text/css" href="" />
+		<link rel="stylesheet" type="text/css" href="../CSS/cssAreaPersonale.css" />
 		<script type="text/javascript" src=""></script>
     </head>
 
     <body>
         <header></header>
-        <breadcrumb></breadcrumb>
         <menu></menu>
-        <div id="menuAmministratore">
-            <ul>
-                <li><a href="../PHP/homeAmministratore.php"><span xml:lang="en">HOME</span> AREA PERSONALE</a></li>
-                <li><a href="../PHP/infoAmministratore.php"></a>INFORMAZIONI PERSONALI</a></li>
-                <li><a href="../PHP/messaggiAmministratore.php">MESSAGGI</a></li>
-                <li><a href="../PHP/veicoliNoleggioAmministratore.php">VEICOLI A NOLEGGIO</a></li>
-                <li><a href="../PHP/veicoliVenditaAmministratore.php">VEICOLI IN VENDITA</a></li>
-            </ul>
-        </div>
+        <breadcrumb></breadcrumb>
+        <menuAmministratore></menuAmministratore>
         <div class="corpoAmministratore">
             <h1>NUOVO VEICOLO DA NOLEGGIARE</h1>
             <messaggio></messaggio>
