corretto errore di caricamento

--- a/HTML/modificaVeicoloNoleggio.html
+++ b/HTML/modificaVeicoloNoleggio.html
@@ -21,7 +21,7 @@
             <h1>MODIFICA VEICOLO DA NOLEGGIARE</h1>
             <messaggio></messaggio>
             <p>Inserisci qui le informazioni sul veicolo da modificare&period;</p>
-            <form id="modificaVeicoloNoleggio" onsubmit="" action="../PHP/modificaVeicoloNoleggio.php" method="POST">
+            <form id="modificaVeicoloNoleggio" onsubmit="" action="" method="POST">
                 <label for="marca">Marca</label>
                 <input type="text" name="marca" id="marca" class="" tabindex="1" />
 
