--- a/HTML/modificaVeicoloVendita.html
+++ b/HTML/modificaVeicoloVendita.html
@@ -21,7 +21,7 @@
             <h1>MODIFICA VEICOLO DA VENDERE</h1>
             <messaggio></messaggio>
             <p>Inserisci qui le informazioni sul veicolo da modificare&period;</p>
-            <form id="modificaVeicoloVendita" onsubmit="" action="../PHP/modificaVeicoloVendita.php" method="POST">
+            <form id="modificaVeicoloVendita" onsubmit="" action="" method="POST">
                 <label for="marca">Marca</label>
                 <input type="text" name="marca" id="marca" class="" tabindex="1" />
 
