--- a/HTML/nuovoMessaggioAmministratore.html
+++ b/HTML/nuovoMessaggioAmministratore.html
@@ -21,7 +21,7 @@
             <h1>NUOVO MESSAGGIO</h1>
             <messaggio></messaggio>
             <p>Scrivi qui il messaggio da inviare&period;</p>
-            <form id="nuovoMessaggioAmministratore" onsubmit="" action="../PHP/nuovoMessaggioAmministratore.php" method="POST">
+            <form id="nuovoMessaggioAmministratore" onsubmit="" action="" method="POST">
                 <label for="destinatario">Destinatario</label>
                 <input type="text" name="destinatario" id="destinatario" class="" tabindex="1" />
 
