--- a/HTML/modificaInfoAmministratore.html
+++ b/HTML/modificaInfoAmministratore.html
@@ -21,7 +21,7 @@
             <h1>MODIFICA INFORMAZIONI PERSONALI</h1>
             <messaggio></messaggio>
             <p>Inserisci qui le informazioni personali da modificare&period;</p>
-            <form id="modificaInfo" onsubmit="" action="../PHP/modificaInfoAmministratore.php" method="POST">
+            <form id="modificaInfo" onsubmit="" action="" method="POST">
                 <label for="nome">Nome</label>
                 <input type="text" name="nome" id="nome" class="" tabindex="1" />
 
