--- a/HTML/nuovoVeicoloNoleggio.html
+++ b/HTML/nuovoVeicoloNoleggio.html
@@ -21,7 +21,7 @@
             <h1>NUOVO VEICOLO DA NOLEGGIARE</h1>
             <messaggio></messaggio>
             <p>Inserisci qui le informazioni sul veicolo da aggiungere&period;</p>
-            <form id="nuovoVeicoloNoleggio" onsubmit="" action="../PHP/nuovoVeicoloNoleggio.php" method="POST">
+            <form id="nuovoVeicoloNoleggio" onsubmit="" action="" method="POST">
                 <label for="marca">Marca</label>
                 <input type="text" name="marca" id="marca" class="" tabindex="1" />
 
