progressione sviluppo area amministratore

--- a/HTML/infoAmministratore.html
+++ b/HTML/infoAmministratore.html
@@ -18,7 +18,7 @@
         <breadcrumb></breadcrumb>
         <menuAmministratore></menuAmministratore>
         <div class="corpoAmministratore">
-            <a class="" href="../PAGES/modificaInfoAmministratore.php">MODIFICA INFORMAZIONI</a>
+            <a class="tastoModifiche" href="../PAGES/modificaInfoAmministratore.php">MODIFICA INFORMAZIONI</a>
             <infoPersonali></infoPersonali>
         </div>
         <footer></footer>
