--- a/HTML/homeAmministratore.html
+++ b/HTML/homeAmministratore.html
@@ -18,10 +18,12 @@
         <breadcrumb></breadcrumb>
         <menuAmministratore></menuAmministratore>
         <div class="corpoAmministratore">
-            <h1>Benvenuto&excl;</h1>
+            <h1>Benvenuto <nome></nome>&excl;</h1>
             <p>Questa &egrave; l&apos;area dedicata ai dipendenti&comma; per la gestione dei veicoli e dei messaggi&period;</p>
-            <a href="../PAGES/nuovoVeicoloNoleggio.php">AGGIUNGI VEICOLO DA NOLEGGIARE</a>
-            <a href="../PAGES/nuovoVeicoloVendita.php">AGGIUNGI VEICOLO DA VENDERE</a>
+            <p> Comincia subito&excl;
+                <a class="tastoModifiche" href="../PAGES/nuovoVeicoloNoleggio.php">AGGIUNGI VEICOLO DA NOLEGGIARE</a>
+                <a class="tastoModifiche" href="../PAGES/nuovoVeicoloVendita.php">AGGIUNGI VEICOLO DA VENDERE</a>
+            </p>
         </div>
         <footer></footer>
     </body>
