--- a/HTML/veicoliVenditaAmministratore.html
+++ b/HTML/veicoliVenditaAmministratore.html
@@ -18,7 +18,7 @@
         <breadcrumb></breadcrumb>
         <menuAmministratore></menuAmministratore>
         <div class="corpoAmministratore">
-            <a href="nuovoVeicoloVendita.php">AGGIUNGI VEICOLO DA VENDERE</a>
+            <a class="tastoModifiche" href="nuovoVeicoloVendita.php">AGGIUNGI VEICOLO DA VENDERE</a>
             <veicoliVendita></veicoliVendita>
         </div>
         <footer></footer>
