--- a/HTML/Contatti.html
+++ b/HTML/Contatti.html
@@ -45,7 +45,7 @@
         
         <div class="">
             
-            <form id="" action=""  method="post">
+            <form id="" action="../PHP/invioMessaggio.php"  method="post">
                 <fieldset>
                     <legend>Contattaci tramite questo modulo!</legend>
                     <p>I campi marcati con * sono obbligatori</p>
