progressione sviluppo area amministratore

--- a/HTML/homeAmministratore.html
+++ b/HTML/homeAmministratore.html
@@ -1,6 +1,7 @@
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="it" lang="it">
     <head>
-        <title>Home &vert; Area Amministratore</title>
+        <title>Home &vert; Area Personale</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta name="title" content="homepage area personale amministratore" />
 		<meta name="description" content="homepage dell'area amministratore del sito" />
@@ -21,8 +22,8 @@
             <h1>Benvenuto <nome></nome>&excl;</h1>
             <p>Questa &egrave; l&apos;area dedicata ai dipendenti&comma; per la gestione dei veicoli e dei messaggi&period;</p>
             <p> Comincia subito&excl;
-                <a class="tastoModifiche" href="../PAGES/nuovoVeicoloNoleggio.php">AGGIUNGI VEICOLO DA NOLEGGIARE</a>
-                <a class="tastoModifiche" href="../PAGES/nuovoVeicoloVendita.php">AGGIUNGI VEICOLO DA VENDERE</a>
+                <a class="tastoModifiche" href="../PAGES/nuovoVeicoloNoleggio.php" tabindex="12">AGGIUNGI VEICOLO DA NOLEGGIARE</a>
+                <a class="tastoModifiche" href="../PAGES/nuovoVeicoloVendita.php" tabindex="13">AGGIUNGI VEICOLO DA VENDERE</a>
             </p>
         </div>
         <footer></footer>
