--- a/HTML/contatti.html
+++ b/HTML/contatti.html
@@ -44,8 +44,8 @@
 
         
         <div class="">
-            
-            <form id="" action="../PHP/invioMessaggio.php"  method="post">
+            <messaggio></messaggio>
+            <form id="formMessaggio" action="../PHP/invioMessaggio.php"  method="post">
                 <fieldset>
                     <legend>Contattaci tramite questo modulo!</legend>
                     <p>I campi marcati con * sono obbligatori</p>
