fix contatti,html, home.html

--- a/HTML/home.html
+++ b/HTML/home.html
@@ -13,7 +13,13 @@
 		
 		<header></header>
         <menu></menu>
-        <breadcrumb></breadcrumb>
+		<breadcrumb></breadcrumb>
+		
+		<noscript>
+			<h2>
+			Il tuo browser non supporta JavaScript oppure è stato disabilitato. Alcune funzioni potrebbero non funzionare correttamente.
+			</h2>
+		</noscript>
 		
 		<div id="">
 			<p class="titolo">CHI SIAMO</p>
