--- a/HTML/contatti.html
+++ b/HTML/contatti.html
@@ -17,6 +17,12 @@
         <menu></menu>
         <breadcrumb></breadcrumb>
         
+        <noscript>
+            <h2>
+            Il tuo browser non supporta JavaScript oppure è stato disabilitato. Alcune funzioni potrebbero non funzionare correttamente.
+            </h2>
+        </noscript>
+
         <div id="mappa">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2801.041923095581!2d11.884345815518582!3d45.40849417910036!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x477eda586ea23ad3%3A0xf4caaf73601b8ca!2sVia%20Paolotti%2C%2035121%20Padova%20PD!5e0!3m2!1sit!2sit!4v1585019531129!5m2!1sit!2sit" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         </div>
