--- a/HTML/veicoliVenditaAmministratore.html
+++ b/HTML/veicoliVenditaAmministratore.html
@@ -19,7 +19,7 @@
         <breadcrumb></breadcrumb>
         <menuAmministratore></menuAmministratore>
         <div class="corpoAmministratore">
-            <a class="tastoModifiche" href="nuovoVeicoloVendita.php">AGGIUNGI VEICOLO DA VENDERE</a>
+            <a class="tastoModifiche" href="nuovoVeicoloVendita.php" tabindex="12">AGGIUNGI VEICOLO DA VENDERE</a>
             <veicoliVendita></veicoliVendita>
         </div>
         <footer></footer>
