--- a/HTML/infoAmministratore.html
+++ b/HTML/infoAmministratore.html
@@ -19,7 +19,7 @@
         <breadcrumb></breadcrumb>
         <menuAmministratore></menuAmministratore>
         <div class="corpoAmministratore">
-            <a class="tastoModifiche" href="../PAGES/modificaInfoAmministratore.php">MODIFICA INFORMAZIONI</a>
+            <a class="tastoModifiche" href="../PAGES/modificaInfoAmministratore.php" tabindex="12">MODIFICA INFORMAZIONI</a>
             <infoPersonali></infoPersonali>
         </div>
         <footer></footer>
