aggiunta tabindex nelle parti comuni

--- a/HTML/modificaInfoAmministratore.html
+++ b/HTML/modificaInfoAmministratore.html
@@ -23,22 +23,26 @@
             <messaggio></messaggio>
             <p>Inserisci qui le informazioni personali da modificare&period;</p>
             <form id="modificaInfo" onsubmit="" action="" method="POST">
-                <label for="nome">Nome</label>
-                <input type="text" name="nome" id="nome" class="" tabindex="12" />
+                <fieldset>
+                    <legend>Informazioni Personali</legend>
+                
+                    <label for="nome">Nome</label>
+                    <input type="text" name="nome" id="nome" class="" tabindex="12" />
 
-                <label for="cognome">Cognome</label>
-                <input type="text" name="cognome" id="cognome" class="" tabindex="13" />
+                    <label for="cognome">Cognome</label>
+                    <input type="text" name="cognome" id="cognome" class="" tabindex="13" />
 
-                <label for="telefono">Telefono</label>
-                <input type="text" name="telefono" id="telefono" class="" tabindex="14" />
+                    <label for="telefono">Telefono</label>
+                    <input type="text" name="telefono" id="telefono" class="" tabindex="14" />
 
-                <label for="cellulare">Cellulare</label>
-                <input type="text" name="cellulare" id="cellulare" class="" tabindex="15" />
+                    <label for="cellulare">Cellulare</label>
+                    <input type="text" name="cellulare" id="cellulare" class="" tabindex="15" />
 
-                <label for="indirizzo">Indirizzo</label>
-                <input type="text" name="indirizzo" id="indirizzo" class="" tabindex="16" />
+                    <label for="indirizzo">Indirizzo</label>
+                    <input type="text" name="indirizzo" id="indirizzo" class="" tabindex="16" />
 
-                <input type="submit" id="modificaInfo" value="SALVA" tabindex="17" />
+                    <input type="submit" id="modificaInfo" value="SALVA" tabindex="17" />
+                </fieldset>
             </form>
         </div>
         <footer></footer>
