--- a/HTML/nuovoVeicoloNoleggio.html
+++ b/HTML/nuovoVeicoloNoleggio.html
@@ -23,22 +23,26 @@
             <messaggio></messaggio>
             <p>Inserisci qui le informazioni sul veicolo da aggiungere&period;</p>
             <form id="nuovoVeicoloNoleggio" onsubmit="" action="" method="POST">
-                <label for="marca">Marca</label>
-                <input type="text" name="marca" id="marca" class="" tabindex="12" />
+                <fieldset>
+                    <legend>Informazioni sul nuovo veicolo</legend>
 
-                <label for="modello">Modello</label>
-                <input type="text" name="modello" id="modello" class="" tabindex="13" />
+                    <label for="marca">Marca</label>
+                    <input type="text" name="marca" id="marca" class="" tabindex="12" />
 
-                <label for="cilindrata">Cilindrata</label>
-                <input type="text" name="cilindrata" id="cilindrata" class="" tabindex="14" />
+                    <label for="modello">Modello</label>
+                    <input type="text" name="modello" id="modello" class="" tabindex="13" />
 
-                <label for="costo">Costo Giornaliero</label>
-                <input type="text" name="costo" id="costo" class="" tabindex="15" />
+                    <label for="cilindrata">Cilindrata</label>
+                    <input type="text" name="cilindrata" id="cilindrata" class="" tabindex="14" />
 
-                <label for="cauzione">Cauzione</label>
-                <input type="text" name="cauzione" id="cauzione" class="" tabindex="16" />
+                    <label for="costo">Costo Giornaliero</label>
+                    <input type="text" name="costo" id="costo" class="" tabindex="15" />
 
-                <input type="submit" id="salvaVeicoloNoleggio" value="SALVA" tabindex="17" />
+                    <label for="cauzione">Cauzione</label>
+                    <input type="text" name="cauzione" id="cauzione" class="" tabindex="16" />
+
+                    <input type="submit" id="salvaVeicoloNoleggio" value="SALVA" tabindex="17" />
+                </fieldset>
             </form>
         </div>
         <footer></footer>
