--- a/HTML/nuovoVeicoloVendita.html
+++ b/HTML/nuovoVeicoloVendita.html
@@ -23,22 +23,26 @@
             <messaggio></messaggio>
             <p>Inserisci qui le informazioni sul veicolo da aggiungere&period;</p>
             <form id="nuovoVeicoloVendita" onsubmit="" action="" method="POST">
-                <label for="marca">Marca</label>
-                <input type="text" name="marca" id="marca" class="" tabindex="12" />
+                <fieldset>
+                    <legend>Informazioni sul nuovo veicolo</legend>
+                
+                    <label for="marca">Marca</label>
+                    <input type="text" name="marca" id="marca" class="" tabindex="12" />
 
-                <label for="modello">Modello</label>
-                <input type="text" name="modello" id="modello" class="" tabindex="13" />
+                    <label for="modello">Modello</label>
+                    <input type="text" name="modello" id="modello" class="" tabindex="13" />
 
-                <label for="km">Chilometri</label>
-                <input type="text" name="" id="km" class="km" tabindex="14" />
+                    <label for="km">Chilometri</label>
+                    <input type="text" name="" id="km" class="km" tabindex="14" />
 
-                <label for="cilindrata">Cilindrata</label>
-                <input type="text" name="cilindrata" id="cilindrata" class="" tabindex="15" />
+                    <label for="cilindrata">Cilindrata</label>
+                    <input type="text" name="cilindrata" id="cilindrata" class="" tabindex="15" />
 
-                <label for="prezzo">Prezzo</label>
-                <input type="text" name="prezzo" id="prezzo" class="" tabindex="16" />
+                    <label for="prezzo">Prezzo</label>
+                    <input type="text" name="prezzo" id="prezzo" class="" tabindex="16" />
 
-                <input type="submit" id="salvaVeicoloVendita" value="SALVA" tabindex="17" />
+                    <input type="submit" id="salvaVeicoloVendita" value="SALVA" tabindex="17" />
+                </fieldset>
             </form>
         </div>
         <footer></footer>
