--- a/HTML/home.html
+++ b/HTML/home.html
@@ -15,29 +15,23 @@
         <menu></menu>
 		<breadcrumb></breadcrumb>
 		
-		<noscript>
-			<h2>
-			Il tuo browser non supporta JavaScript oppure è stato disabilitato. Alcune funzioni potrebbero non funzionare correttamente.
-			</h2>
-		</noscript>
-		
 		<div id="">
 			<p class="titolo">CHI SIAMO</p>
 			<div class="">
-				<p class=""> La nostra è una concessionaria relativamente nuova che mira ad essere un punto di riferimento per tutti gli amanti delle quattro ruote del Padovano
-							 e diventare un modello di qualità è professionalità sul territorio. 
+				<p class=""> La nostra &egrave; una concessionaria relativamente nuova che mira ad essere un punto di riferimento per tutti gli amanti delle quattro ruote del Padovano
+							 e diventare un modello di qualit&agrave; &egrave; professionalit&agrave; sul territorio. 
 				</p>
 			</div>
 			<p class="titolo">Il CLIENTE PRIMA DI TUTTO</p>
 			<div class="">
-				<p class=""> Il cliente è per noi il bene più prezioso ed al centro della nostra strategia, la nostra politica aziendale è infatti disegnata intorno al cliente ed alle sue esigenze. 
-							 Gia oggi la nostra concessionaria si rivolge ad una clientela estesa come una realtà in grado di offrire un’offerta ampia e diversificata di prodotti e servizi, 
-							 il nostro obiettivo è quello di sedurre e conquistare il cliente offrendo l’auto dei suoi sogni nuova o usata con il miglior rapporto qualità/prezzo disponibile sul mercato.
+				<p class=""> Il cliente &egrave; per noi il bene pi&ugrave; prezioso ed al centro della nostra strategia, la nostra politica aziendale &egrave; infatti disegnata intorno al cliente ed alle sue esigenze. 
+							 Gia oggi la nostra concessionaria si rivolge ad una clientela estesa come una realt&agrave; in grado di offrire un’offerta ampia e diversificata di prodotti e servizi, 
+							 il nostro obiettivo &egrave; quello di sedurre e conquistare il cliente offrendo l’auto dei suoi sogni nuova o usata con il miglior rapporto qualit&agrave;/prezzo disponibile sul mercato.
 				</p>
 			</div>
 			
 		</div>
 		
-	
+		<footer></footer>
 	</body>
 </html>
