--- a/HTML/login.html
+++ b/HTML/login.html
@@ -22,7 +22,7 @@
     <div class="main">
             <div id="loginBox" class="outerBox login" >
                 <h1 class="titolo">Accedi al tuo account</h1>
-                <form id="loginForm" action="../PHP/login/login.php" method="post">
+                <form id="loginForm" action="../PHP/accessoLogin.php" method="post">
                     <fieldset>
                         <legend>Email e password</legend>
 
