--- a/HTML/registrati.html
+++ b/HTML/registrati.html
@@ -23,7 +23,7 @@
 			<div id="registrationBox" class="outerBox">
 				<messaggio></messaggio>
 				<h1>Crea il tuo account!</h1>
-				<form id="registrationForm" onsubmit="return checkForm('registrationForm');" action="../PHP/login/registra.php" method="post" >
+				<form id="registrationForm" onsubmit="return checkForm('registrationForm');" action="../PHP/registrazione.php" method="post" >
 					<fieldset>
 						<legend>Dati personali</legend>
 
