fine funzioni amministratore

--- a/HTML/homeAmministratore.html
+++ b/HTML/homeAmministratore.html
@@ -21,9 +21,10 @@
         <div class="corpoAmministratore">
             <h1>Benvenuto <nome></nome>&excl;</h1>
             <p>Questa &egrave; l&apos;area dedicata ai dipendenti&comma; per la gestione dei veicoli e dei messaggi&period;</p>
-            <p> Comincia subito&excl;
-                <a class="tastoModifiche" href="../PAGES/nuovoVeicoloNoleggio.php" tabindex="12">AGGIUNGI VEICOLO DA NOLEGGIARE</a>
-                <a class="tastoModifiche" href="../PAGES/nuovoVeicoloVendita.php" tabindex="13">AGGIUNGI VEICOLO DA VENDERE</a>
+            <p>Comincia subito&excl;</p>
+            <p>
+               <a class="tastoModifiche" href="../PAGES/nuovoVeicoloNoleggio.php" tabindex="12">AGGIUNGI VEICOLO DA NOLEGGIARE</a>
+               <a class="tastoModifiche" href="../PAGES/nuovoVeicoloVendita.php" tabindex="13">AGGIUNGI VEICOLO DA VENDERE</a>
             </p>
         </div>
         <footer></footer>
