--- a/HTML/messaggiAmministratore.html
+++ b/HTML/messaggiAmministratore.html
@@ -19,6 +19,7 @@
         <breadcrumb></breadcrumb>
         <menuAmministratore></menuAmministratore>
         <div class="corpoAmministratore">
+            <a class="tastoModifiche" href="../PAGES/nuovoMessaggioAmministratore.php" tabindex="12">NUOVO MESSAGGIO</a>
             <h1>MESSAGGI RICEVUTI</h1>
             <messaggiRicevuti></messaggiRicevuti>
             <h1>MESSAGGI INVIATI</h1>
