--- a/HTML/nuovoMessaggioAmministratore.html
+++ b/HTML/nuovoMessaggioAmministratore.html
@@ -19,23 +19,26 @@
         <breadcrumb></breadcrumb>
         <menuAmministratore></menuAmministratore>
         <div class="corpoAmministratore">
-            <h1>NUOVO MESSAGGIO</h1>
-            <messaggio></messaggio>
             <p>Scrivi qui il messaggio da inviare&period;</p>
-            <form id="nuovoMessaggioAmministratore" onsubmit="" action="" method="POST">
+            <messaggio></messaggio>
+            <form id="nuovoMessaggioAmministratore" action="../PHP/salvaNuovoMessaggioAmm.php" method="POST">
                 <fieldset>
-                    <legend>Informazioni richieste</legend>
+                    <legend>Nuovo messaggio</legend>
+                    <p>I campi marcati con l&apos;asterisco * sono obbligatori&period;</p>
 
-                    <label for="destinatario">Destinatario</label>
-                    <input type="text" name="destinatario" id="destinatario" class="" tabindex="12" />
+                    <label for="mittente">Email Mittente *</label>
+                    <input type="text" name="mittente" id="mittente" class="" tabindex="12" />
 
-                    <label for="oggetto">Oggetto</label>
-                    <input type="text" name="oggetto" id="oggetto" class="" tabindex="13" />
+                    <label for="destinatario">Email Destinatario *</label>
+                    <input type="text" name="destinatario" id="destinatario" class="" tabindex="13" />
 
-                    <label for="testo">Testo</label>
-                    <input type="text" name="testo" id="testo" class="" tabindex="14" />
+                    <label for="oggetto">Oggetto *</label>
+                    <input type="text" name="oggetto" id="oggetto" class="" tabindex="14" />
 
-                    <input type="submit" id="inviaMessaggio" value="INVIA" tabindex="15" />
+                    <label for="testo">Testo *</label>
+                    <input type="text" name="testo" id="testo" class="" tabindex="15" />
+
+                    <input type="submit" id="salvaNuovoMessaggioAmm" value="INVIA" tabindex="16" />
                 </fieldset>
             </form>
         </div>
