--- a/HTML/nuovoVeicoloNoleggio.html
+++ b/HTML/nuovoVeicoloNoleggio.html
@@ -19,29 +19,29 @@
         <breadcrumb></breadcrumb>
         <menuAmministratore></menuAmministratore>
         <div class="corpoAmministratore">
-            <h1>NUOVO VEICOLO DA NOLEGGIARE</h1>
+            <p>Inserisci qui le informazioni sul veicolo a noleggio&period;</p>
             <messaggio></messaggio>
-            <p>Inserisci qui le informazioni sul veicolo da aggiungere&period;</p>
-            <form id="nuovoVeicoloNoleggio" onsubmit="" action="" method="POST">
+            <form id="nuovoVeicoloNoleggio" action="../PHP/salvaNuovoVeicoloNoleggio.php" method="POST">
                 <fieldset>
-                    <legend>Informazioni sul nuovo veicolo</legend>
+                    <legend>Informazioni sul veicolo a noleggio da aggiungere </legend>
+                    <p>I campi marcati con l&apos;asterisco * sono obbligatori</p>
 
-                    <label for="marca">Marca</label>
+                    <label for="marca">Marca *</label>
                     <input type="text" name="marca" id="marca" class="" tabindex="12" />
 
-                    <label for="modello">Modello</label>
+                    <label for="modello">Modello *</label>
                     <input type="text" name="modello" id="modello" class="" tabindex="13" />
 
-                    <label for="cilindrata">Cilindrata</label>
+                    <label for="cilindrata">Cilindrata *</label>
                     <input type="text" name="cilindrata" id="cilindrata" class="" tabindex="14" />
 
-                    <label for="costo">Costo Giornaliero</label>
+                    <label for="costo">Costo Giornaliero *</label>
                     <input type="text" name="costo" id="costo" class="" tabindex="15" />
 
-                    <label for="cauzione">Cauzione</label>
+                    <label for="cauzione">Cauzione *</label>
                     <input type="text" name="cauzione" id="cauzione" class="" tabindex="16" />
 
-                    <input type="submit" id="salvaVeicoloNoleggio" value="SALVA" tabindex="17" />
+                    <input type="submit" id="salvaNuovoVeicoloNoleggio" value="SALVA" tabindex="17" />
                 </fieldset>
             </form>
         </div>
