--- a/HTML/contatti.html
+++ b/HTML/contatti.html
@@ -26,7 +26,7 @@
                 <div class="titolo"> INDIRIZZI </div>
                 <ul>
                     <li>Concessionaria boh (PD)</li>
-                    <li>Via xxxxxxxxxx (PD)</li>
+                    <li>Via G.B. Belzoni, 7 - 35121 Padova (Italy) (PD)</li>
                 </ul>
             </div>
 
@@ -34,9 +34,9 @@
         <div id="contatti">
             <div class="titolo"> CONTATTI </div>
             <ul>
-                <li>Email: xxxxxxxxxx</li>
-                <li>Numero di telefono: xxxxxxxxxx</li>
-                <li>Numero di fax: xxxxxxx</li>
+                <li>Email: ConcessionariaGreg@gmail.com</li>
+                <li>Numero di telefono:  0437 83756</li>
+                <li>Numero di fax: 0437 95565</li>
             </ul>
         </div>
 
