--- a/HTML/contatti.html
+++ b/HTML/contatti.html
@@ -25,7 +25,7 @@
             <div id="indirizzo">
                 <div class="titolo"> INDIRIZZI </div>
                 <ul>
-                    <li>Concessionaria boh (PD)</li>
+                    <li>Concessionaria Greg (PD)</li>
                     <li>Via G.B. Belzoni, 7 - 35121 Padova (Italy) (PD)</li>
                 </ul>
             </div>
