aggiunto link al css nelle pagine html

--- a/HTML/home.html
+++ b/HTML/home.html
@@ -9,6 +9,8 @@
 		<meta name="keywords" content="concessionaria, auto, Padova" />
 		<meta name="language" content="italian it" />
 		<meta name="author" content="Erik Tabacchi" />
+
+		<link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
 	</head>
 	
 	<body>
