--- a/HTML/login.html
+++ b/HTML/login.html
@@ -10,7 +10,7 @@
 		<meta name="language" content="italian it" />
 		<meta name="author" content="Riccardo Conte" />
     <link rel="icon" type="images/png" href="../Images/auto.svg" />
-    <link rel="stylesheet" type="text/css" href="" />
+    <link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
     <script type="text/javascript" src=""></script>
 	</head>
 
