--- a/HTML/noleggioVeicolo.html
+++ b/HTML/noleggioVeicolo.html
@@ -10,7 +10,7 @@
 		<meta name="language" content="italian it" />
 		<meta name="author" content="Giacomo Corro" />
 
-		
+		<link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
 		<script src="../JS/prova.js" type="text/javascript"></script> 
 	</head>
 
