--- a/HTML/paginaVuota.html
+++ b/HTML/paginaVuota.html
@@ -6,6 +6,8 @@
         <title>Reindirizzamento...</title>
         <meta name="title" content="login" />
         <meta name="language" content="italian it" />
+
+        <link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
     </head>
 
     <body>
