--- a/HTML/registrati.html
+++ b/HTML/registrati.html
@@ -5,13 +5,13 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<title>Registrati</title>
 		<meta name="title" content="Registrati" />
-    <meta name="description" content="Pagina di Registrazione" />
+    	<meta name="description" content="Pagina di Registrazione" />
 		<meta name="keywords" content="auto, preventivi, noleggi, dati, registrazione, account" />
 		<meta name="language" content="italian it" />
 		<meta name="author" content="Riccardo Conte" />
-    <link rel="icon" type="images/png" href="../Images/auto.svg" />
-    <link rel="stylesheet" type="text/css" href="" />
-    <script type="text/javascript" src=""></script>
+    	<link rel="icon" type="images/png" href="../Images/auto.svg" />
+		<link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
+    	<script type="text/javascript" src=""></script>
 	</head>
 
 	<body>
