--- a/HTML/contatti.html
+++ b/HTML/contatti.html
@@ -9,6 +9,8 @@
         <meta name="keywords" content="Concessionaria, auto, Padova, info, contatti" />
 		<meta name="language" content="italian it" />
         <meta name="author" content="Erik Tabacchi" />
+
+        <link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
         
 	</head>
 
