--- a/HTML/noleggioAcquista.html
+++ b/HTML/noleggioAcquista.html
@@ -9,6 +9,8 @@
 		<meta name="keywords" content="auto, automobili, noleggio, acquisto, noleggaire, acquistare" />
 		<meta name="language" content="italian it" />
 		<meta name="author" content="Giacomo Corro" />
+
+		<link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
 	</head>
 
 	<body>
