--- a/HTML/home.html
+++ b/HTML/home.html
@@ -32,7 +32,7 @@
 							il nostro obiettivo &egrave; quello di sedurre e conquistare il cliente offrendo l’auto dei suoi sogni nuova o usata con il miglior rapporto qualit&agrave;/prezzo disponibile sul mercato.
 				</p>
 			</div>
-			
+			<img src="../Images/Concessionaria.jpg"  alt="Concessionaria"/>
 		</div>
 		
 		<footer></footer>
