--- a/HTML/noleggioAcquista.html
+++ b/HTML/noleggioAcquista.html
@@ -9,8 +9,11 @@
 		<meta name="keywords" content="auto, automobili, noleggio, acquisto, noleggaire, acquistare" />
 		<meta name="language" content="italian it" />
 		<meta name="author" content="Giacomo Corro" />
+		
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 		<link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
+		<link rel="stylesheet" type="text/css" href="../CSS/cssVeicoli.css" />
 	</head>
 
 	<body>
@@ -21,7 +24,9 @@
 
 		<filtriAuto></filtriAuto>
 
-		<auto></auto>
+		<div id="risultati">
+			<auto></auto>
+		</div>
 
 		<footer></footer>
 	</body>
