--- a/HTML/noleggioVeicolo.html
+++ b/HTML/noleggioVeicolo.html
@@ -10,6 +10,8 @@
 		<meta name="language" content="italian it" />
 		<meta name="author" content="Giacomo Corro" />
 
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+
 		<link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
 		<script src="../JS/prova.js" type="text/javascript"></script> 
 	</head>
@@ -25,12 +27,12 @@
 		<div>
 			<form action="../PHP/noleggiaVeicoloFn.php?costo=_COSTONOLEGGIO_" onsubmit="return checkDateNolo();" method="post">
 				<fieldset>
-					<p>Inserisci date del noleggio, nel formato gg-mm-aaaa</p>
-					<label>Dal</label>
+					<legend>Inserisci date del noleggio, nel formato gg-mm-aaaa</legend>
+					<label for="dataInizioNolo">Dal</label>
 					<input type="text" name="dataInizioNolo" onchange="dataInizioChange(event);" tabindex="7" />
-					<label>Al</label>
+					<label for="dataFineNolo">Al</label>
 					<input name="dataFineNolo" type="text" onchange="dataFineChange(event);" tabindex="8" />
-					<button type="submit" name="targa" value="'_TARGA_'" class="button internal-button" tabindex="9">Noleggia</button>
+					<input type="submit" name="targa" title="'_TARGA_'" value="Prenota" class="button" tabindex="9" />
 				</fieldset>
 			</form>
 		</div>
