--- a/HTML/login.html
+++ b/HTML/login.html
@@ -11,6 +11,7 @@
 		<meta name="author" content="Riccardo Conte" />
     <link rel="icon" type="images/png" href="../Images/auto.svg" />
     <link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
+		<link rel="stylesheet" type="text/css" href="../CSS/cssUtente.css" />
     <script type="text/javascript" src=""></script>
 	</head>
 
