--- a/HTML/home.html
+++ b/HTML/home.html
@@ -18,16 +18,16 @@
         <menu></menu>
 		<breadcrumb></breadcrumb>
 		
-		<div id="">
+		<div id="container">
 			<p class="titolo">CHI SIAMO</p>
-			<div class="">
-				<p class=""> La nostra &egrave; una concessionaria relativamente nuova che mira ad essere un punto di riferimento per tutti gli amanti delle quattro ruote del Padovano
+			<div class="text">
+				<p> La nostra &egrave; una concessionaria relativamente nuova che mira ad essere un punto di riferimento per tutti gli amanti delle quattro ruote del Padovano
 							e diventare un modello di qualit&agrave; &egrave; professionalit&agrave; sul territorio. 
 				</p>
 			</div>
 			<p class="titolo">Il CLIENTE PRIMA DI TUTTO</p>
-			<div class="">
-				<p class=""> Il cliente &egrave; per noi il bene pi&ugrave; prezioso ed al centro della nostra strategia, la nostra politica aziendale &egrave; infatti disegnata intorno al cliente ed alle sue esigenze. 
+			<div class="text">
+				<p> Il cliente &egrave; per noi il bene pi&ugrave; prezioso ed al centro della nostra strategia, la nostra politica aziendale &egrave; infatti disegnata intorno al cliente ed alle sue esigenze. 
 							Gia oggi la nostra concessionaria si rivolge ad una clientela estesa come una realt&agrave; in grado di offrire un’offerta ampia e diversificata di prodotti e servizi, 
 							il nostro obiettivo &egrave; quello di sedurre e conquistare il cliente offrendo l’auto dei suoi sogni nuova o usata con il miglior rapporto qualit&agrave;/prezzo disponibile sul mercato.
 				</p>
