--- a/HTML/home.html
+++ b/HTML/home.html
@@ -11,6 +11,7 @@
 		<meta name="author" content="Erik Tabacchi" />
 
 		<link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
+		<link rel="stylesheet" type="text/css" href="../CSS/cssHome.css" />
 	</head>
 	
 	<body>
@@ -18,20 +19,19 @@
         <menu></menu>
 		<breadcrumb></breadcrumb>
 		
-		<div id="container">
+		<div class="container">
 			<p class="titolo">CHI SIAMO</p>
-			<div class="text">
-				<p> La nostra &egrave; una concessionaria relativamente nuova che mira ad essere un punto di riferimento per tutti gli amanti delle quattro ruote del Padovano
-							e diventare un modello di qualit&agrave; &egrave; professionalit&agrave; sul territorio. 
-				</p>
-			</div>
+			
+			<p class="text"> La nostra &egrave; una concessionaria relativamente nuova che mira ad essere un punto di riferimento per tutti gli amanti delle quattro ruote del Padovano
+							e diventare un modello di qualit&agrave; &egrave; professionalit&agrave; sul territorio. </p>
+			
 			<p class="titolo">Il CLIENTE PRIMA DI TUTTO</p>
-			<div class="text">
-				<p> Il cliente &egrave; per noi il bene pi&ugrave; prezioso ed al centro della nostra strategia, la nostra politica aziendale &egrave; infatti disegnata intorno al cliente ed alle sue esigenze. 
+
+			<p class="text"> Il cliente &egrave; per noi il bene pi&ugrave; prezioso ed al centro della nostra strategia, la nostra politica aziendale &egrave; infatti disegnata intorno al cliente ed alle sue esigenze. 
 							Gia oggi la nostra concessionaria si rivolge ad una clientela estesa come una realt&agrave; in grado di offrire un’offerta ampia e diversificata di prodotti e servizi, 
 							il nostro obiettivo &egrave; quello di sedurre e conquistare il cliente offrendo l’auto dei suoi sogni nuova o usata con il miglior rapporto qualit&agrave;/prezzo disponibile sul mercato.
-				</p>
-			</div>
+			</p>
+			
 			<img src="../Images/Concessionaria.jpg"  alt="Concessionaria"/>
 		</div>
 		
