Revert "aggiunto link al css nelle pagine html"
This reverts commit bb992401303d3accef8ccf74272cb4615bf4dd52.

--- a/HTML/areaPrivata.html
+++ b/HTML/areaPrivata.html
@@ -5,14 +5,13 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<title>Area Privata</title>
 		<meta name="title" content="Area privata utente" />
-  	<meta name="description" content="Area personale dell'utente" />
+    <meta name="description" content="Area personale dell'utente" />
 		<meta name="keywords" content="auto, preventivi, noleggi, messaggi, login, account" />
 		<meta name="language" content="italian it" />
 		<meta name="author" content="Riccardo Conte" />
-  	<link rel="icon" type="images/png" href="../Images/auto.svg" />
-		<link rel="stylesheet" type="text/css" href="../CSS/cssUtente.css" />
-		<link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
-  	<script type="text/javascript" src=""></script>
+    <link rel="icon" type="images/png" href="../Images/auto.svg" />
+    <link rel="stylesheet" type="text/css" href="" />
+    <script type="text/javascript" src=""></script>
 	</head>
 
 	<body>
@@ -20,13 +19,13 @@
 		<menu></menu>
 		<breadcrumb></breadcrumb>
 
-		<div class="main">
-		<h1>AREA PERSONALE</h1>
-		<sideNav></sideNav>
-		<contentItems></contentItems>
+    <div class="main">
+      <h1>AREA PERSONALE</h1>
+      <sideNav></sideNav>
+      <contentItems></contentItems>
 
-		</div>
+    </div>
 
-		<footer></footer>
-	</body>
+    <footer></footer>
+  </body>
 </html>
