--- a/HTML/modificaVeicoloNoleggio.html
+++ b/HTML/modificaVeicoloNoleggio.html
@@ -8,9 +8,8 @@
 		<meta name="keywords" content="modifica veicolo, veicolo noleggio, area personale, area amministratore" />
 		<meta name="language" content="italian it" />
 		<meta name="author" content="Giulia Fiorese" />
-        <link rel="icon" type="images/png" href="../Images/auto.svg" />
-        <link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
-		<link rel="stylesheet" type="text/css" href="../CSS/cssAmministratore.css" />
+		<link rel="icon" type="images/png" href="../Images/auto.svg" />
+		<link rel="stylesheet" type="text/css" href="../CSS/cssAreaPersonale.css" />
 		<script type="text/javascript" src=""></script>
     </head>
 
