--- a/HTML/areaPrivata.html
+++ b/HTML/areaPrivata.html
@@ -5,13 +5,14 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<title>Area Privata</title>
 		<meta name="title" content="Area privata utente" />
-    <meta name="description" content="Area personale dell'utente" />
+    	<meta name="description" content="Area personale dell'utente" />
 		<meta name="keywords" content="auto, preventivi, noleggi, messaggi, login, account" />
 		<meta name="language" content="italian it" />
 		<meta name="author" content="Riccardo Conte" />
-    <link rel="icon" type="images/png" href="../Images/auto.svg" />
-    <link rel="stylesheet" type="text/css" href="" />
-    <script type="text/javascript" src=""></script>
+		<link rel="icon" type="images/png" href="../Images/auto.svg" />
+		<link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
+    	<link rel="stylesheet" type="text/css" href="../CSS/cssUtente.css" />
+    	<script type="text/javascript" src=""></script>
 	</head>
 
 	<body>
