--- a/HTML/areaPrivata.html
+++ b/HTML/areaPrivata.html
@@ -21,7 +21,7 @@
 		<breadcrumb></breadcrumb>
 
 		<div class="main">
-		<h1>AREA PERSONALE</h1>
+		<h1 class='titolo'>AREA PERSONALE</h1>
 		<sideNav></sideNav>
 		<contentItems></contentItems>
 
