fix noleggio auto

--- a/HTML/noleggioVeicolo.html
+++ b/HTML/noleggioVeicolo.html
@@ -25,7 +25,7 @@
 		<h1>Riepilogo noleggio</h1>
 
 		<div>
-			<form action="../PHP/noleggiaVeicoloFn.php?costo=_COSTONOLEGGIO_" onsubmit="return checkDateNolo();" method="post">
+			<form action="../PHP/noleggiaVeicoloFn.php?targaAuto=_TARGA_" onsubmit="return checkDateNolo();" method="post">
 				<fieldset>
 					<legend>Inserisci date del noleggio, nel formato gg-mm-aaaa</legend>
 					<label for="dataInizioNolo">Dal</label>
