--- a/HTML/modificaVeicoloVendita.html
+++ b/HTML/modificaVeicoloVendita.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="it" lang="it">
     <head>
-        <title>Modifica Veicolo &vert; Area Personale</title>
+        <title>Modifica Veicolo &vert; Area Amministratore</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta name="title" content="modifica veicolo da vendere" />
 		<meta name="description" content="pagina per modifica veicolo da vendere" />
