fix html area amministratore

--- a/HTML/modificaInfoAmministratore.html
+++ b/HTML/modificaInfoAmministratore.html
@@ -20,10 +20,9 @@
         <breadcrumb></breadcrumb>
         <menuAmministratore></menuAmministratore>
         <div class="corpoAmministratore">
-            <h1>MODIFICA INFORMAZIONI PERSONALI</h1>
-            <messaggio></messaggio>
             <p>Inserisci qui le informazioni personali da modificare&period;</p>
-            <form id="modificaInfo" onsubmit="" action="" method="POST">
+            <messaggio></messaggio>
+            <form id="modificaInfo" class="formAmm" onsubmit="" action="" method="POST">
                 <fieldset>
                     <legend>Informazioni Personali</legend>
                 
