--- a/HTML/modificaVeicoloNoleggio.html
+++ b/HTML/modificaVeicoloNoleggio.html
@@ -20,10 +20,10 @@
         <breadcrumb></breadcrumb>
         <menuAmministratore></menuAmministratore>
         <div class="corpoAmministratore">
-            <h1>MODIFICA VEICOLO DA NOLEGGIARE</h1>
             <messaggio></messaggio>
             <p>Inserisci qui le informazioni sul veicolo da modificare&period;</p>
-            <form id="modificaVeicoloNoleggio" onsubmit="" action="" method="POST">
+            <messaggio></messaggio>
+            <form id="modificaVeicoloNoleggio" class="formAmm" onsubmit="" action="" method="POST">
                 <fieldset>
                     <legend>Informazioni da modificare</legend>
 
