--- a/HTML/modificaVeicoloVendita.html
+++ b/HTML/modificaVeicoloVendita.html
@@ -20,10 +20,9 @@
         <breadcrumb></breadcrumb>
         <menuAmministratore></menuAmministratore>
         <div class="corpoAmministratore">
-            <h1>MODIFICA VEICOLO DA VENDERE</h1>
-            <messaggio></messaggio>
             <p>Inserisci qui le informazioni sul veicolo da modificare&period;</p>
-            <form id="modificaVeicoloVendita" onsubmit="" action="" method="POST">
+            <messaggio></messaggio>
+            <form id="modificaVeicoloVendita" class="formAmm" onsubmit="" action="" method="POST">
                 <fieldset>
                     <legend>Informazioni da modificare</legend>
 
