--- a/HTML/nuovoMessaggioAmministratore.html
+++ b/HTML/nuovoMessaggioAmministratore.html
@@ -22,7 +22,7 @@
         <div class="corpoAmministratore">
             <p>Scrivi qui il messaggio da inviare&period;</p>
             <messaggio></messaggio>
-            <form id="nuovoMessaggioAmministratore" action="../PHP/salvaNuovoMessaggioAmm.php" method="POST">
+            <form id="nuovoMessaggioAmministratore" class="formAmm" action="../PHP/salvaNuovoMessaggioAmm.php" method="POST">
                 <fieldset>
                     <legend>Nuovo messaggio</legend>
                     <p>I campi marcati con l&apos;asterisco * sono obbligatori&period;</p>
