--- a/HTML/nuovoVeicoloNoleggio.html
+++ b/HTML/nuovoVeicoloNoleggio.html
@@ -22,7 +22,7 @@
         <div class="corpoAmministratore">
             <p>Inserisci qui le informazioni sul veicolo a noleggio&period;</p>
             <messaggio></messaggio>
-            <form id="nuovoVeicoloNoleggio" action="../PHP/salvaNuovoVeicoloNoleggio.php" method="POST">
+            <form id="nuovoVeicoloNoleggio" class="formAmm" action="../PHP/salvaNuovoVeicoloNoleggio.php" method="POST">
                 <fieldset>
                     <legend>Informazioni sul veicolo a noleggio da aggiungere </legend>
                     <p>I campi marcati con l&apos;asterisco * sono obbligatori</p>
