--- a/HTML/nuovoVeicoloVendita.html
+++ b/HTML/nuovoVeicoloVendita.html
@@ -22,7 +22,7 @@
         <div class="corpoAmministratore">
             <p>Inserisci qui le informazioni sul veicolo in vendita&period;</p>
             <messaggio></messaggio>
-            <form id="nuovoVeicoloVendita" action="../PHP/salvaNuovoVeicoloVendita.php" method="POST">
+            <form id="nuovoVeicoloVendita" class="formAmm" action="../PHP/salvaNuovoVeicoloVendita.php" method="POST">
                 <fieldset>
                     <legend>Informazioni sul veicolo in vendita da aggiungere </legend>
                     <p>I campi marcati con l&apos;asterisco * sono obbligatori</p>
