JAVASCRIPT DI MERDA

--- a/HTML/noleggioVeicolo.html
+++ b/HTML/noleggioVeicolo.html
@@ -42,11 +42,11 @@
 			<h2>_MARCAMODELLO_</h2>
 			<ul>
 				<li><p><strong>Cilindrata:</strong>  _CILINDRATA_</p></li>
-				<li><p><strong>Costo noleggio (al giorno):</strong> <span>_COSTONOLEGGIO_</span></p></li>
+				<li><p><strong>Costo noleggio (al giorno):</strong> <span id="costoNolo">_COSTONOLEGGIO_</span></p></li>
 				<li><p><strong>Cauzione:</strong> _CAUZIONE_</p></li>
 			</ul>
 
-			<h3>COSTO TOTALE: 0</h3>
+			<h3 id="costoTot">COSTO TOTALE: 0</h3>
 		</div>
 
 		<footer></footer>
